# idprova

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.release  IDPROVA-MASTER.md  IDPROVA-PLAN.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  START-SESSION.md  THIS_WEEK.md  WALKTHROUGH.md  demo-a2a.ps1  demo-mcp.ps1  demo-multiagent.ps1  demo.ps1  docker-compose.yml  fly.toml  openapi.yaml  test-tamper.ps1
.cargo/: audit.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE-NOTES-v0.1.2-DRAFT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  npm-publish.yml  pypi-publish.yml  release.yml
.planning/: APP_HTML_PLAN.md  HANDOVER-TEMPLATE.md  HANDOVER.md  ROADMAP.md  STATE.md  config.json
HANDOVERS/: M2-S7-track-a.md  M4-S1-track-a.md  M7-S8-track-a.md  M_A-S9-main.md  NEXT-SESSION-PLAN.md  P0-S1-track-a.md  P1-S2-track-a.md  P2-S3-track-a.md  P2-S4-track-a.md  P2-S56-track-a.md  P7-S1-track-c.md  S10-worker-merge.md
LAUNCH/: 00-INDEX.md  01-STATUS-MAP.md  02-PRE-LAUNCH-CHECKLIST.md  03-STAGED-ROADMAP.md  04-PLATFORM-STRATEGY.md  05-LAUNCH-WEEK-PLAYBOOK.md  06-DECISION-GATES.md  07-MARKET-RESEARCH.md  08-REFERENCE-LIBRARY.md  09-SEO-AND-CONTENT.md  10-LAUNCH-CONTENT-DRAFTS.md  10-STANDARDS-ENGAGEMENT.md  11-COMPLETE-STATUS-MAP.md  AUTH-SETUP.md  publish-v0.1.0.sh
LAUNCH/drafts/: pycon-au-2026-cfp.md  w3c-did-v1.1-comments.md
crates/idprova-adapter-oidc-generic/: Cargo.toml  README.md
crates/idprova-adapter-oidc-generic/src/: adapter.rs  lib.rs  mapper.rs
crates/idprova-adapter-oidc-generic/tests/: integration.rs
crates/idprova-adapter-oidc-generic/tests/test_keys/: jwk_n.txt
crates/idprova-cli/: Cargo.toml  README.md
crates/idprova-cli/src/: config.rs  main.rs
crates/idprova-cli/src/commands/: aid.rs  dat.rs  keygen.rs  mod.rs  receipt.rs
crates/idprova-cli/tests/: aid.rs  dat.rs  delegation_lifecycle.rs  keygen.rs  receipt.rs  registry_roundtrip.rs
crates/idprova-core/: Cargo.toml  README.md
crates/idprova-core/src/: error.rs  http.rs  lib.rs
crates/idprova-core/src/aid/: builder.rs  document.rs  mod.rs
crates/idprova-core/src/crypto/: hash.rs  keys.rs  mod.rs
crates/idprova-core/src/dat/: chain.rs  constraints.rs  mod.rs  scope.rs  token.rs
crates/idprova-core/src/policy/: constraints.rs  context.rs  decision.rs  evaluator.rs  inheritance.rs  mod.rs  rate.rs
crates/idprova-core/src/receipt/: anchor.rs  batch.rs  commitment.rs  entry.rs  guardrails.rs  log.rs  merkle.rs  mod.rs
crates/idprova-core/src/trust/: level.rs  mod.rs
crates/idprova-identity-adapters/: Cargo.toml  README.md
crates/idprova-identity-adapters/src/: attributes.rs  audit.rs  error.rs  lib.rs  oidc.rs  scim.rs
crates/idprova-mcp/: Cargo.toml  README.md
crates/idprova-mcp-demo/: Cargo.toml  README.md
crates/idprova-mcp-demo/public/: readme.txt
crates/idprova-mcp-demo/src/: main.rs
crates/idprova-mcp/examples/: README.md  filesystem_mcp.rs  multi_agent.rs
crates/idprova-mcp/src/: auth.rs  error.rs  lib.rs  receipt.rs  scope.rs
crates/idprova-mcp/tests/: e2e_golden_path.rs
crates/idprova-middleware/: Cargo.toml  README.md
crates/idprova-middleware/src/: error.rs  lib.rs
crates/idprova-middleware/tests/: integration.rs
crates/idprova-registry/: Cargo.toml  README.md
crates/idprova-registry/src/: api_keys.rs  auth.rs  billing.rs  binding.rs  error.rs  lib.rs  main.rs  middleware.rs  ratelimit.rs  state.rs  store.rs  usage.rs
crates/idprova-registry/src/routes/: aids.rs  dats.rs  meta.rs  mod.rs
crates/idprova-registry/tests/: integration.rs
crates/idprova-verify/: Cargo.toml  README.md
crates/idprova-verify/src/: lib.rs
dashboard/: README.md  app.html  index.html
docs/: ADOPTION-GUIDE.md  ENTERPRISE-LAUNCH-PLAN.md  GAP-ANALYSIS.md  NCCoE_Feedback_TechBlaze_1.docx  NCCoE_Feedback_TechBlaze_Branded v2.docx  NCCoE_Feedback_TechBlaze_v3_Final.docx  NIST-RFI-Response-Draft.md  STRIDE-THREAT-MODEL.md  THREAT-MODEL.md  TRD.md  api-reference.md  compliance.md  concepts.md  controls.md  core-api.md  diagrams.html  gdpr.md  generate-nccoe-pdf.py  generate-rfi-pdf.py  getting-started.md  key-rotation.md  mermaid-render.html  nccoe-feedback.mdx  nccoe-submission-email.md  protocol-spec-v0.1.md  sdk-python.md  sdk-typescript.md  security.md  ~$CoE_Feedback_TechBlaze_v3_Final.docx
docs/adr/: 0003-tenant-boundary.md  0011-rekor-transparency-anchor.md  0012-privacy-preserving-batched-anchoring.md  README.md
docs/demo/: SCRIPT.md  VERIFY-YOURSELF.md  run.sh
docs/integrations/: README.md
docs/positioning/: idprova-vs-alternatives.md
examples/autogen/: quickstart.py
examples/crewai/: quickstart.py
examples/langchain/: quickstart.py
examples/python/: README.md  issue_verify.py  requirements-langchain.txt  requirements.txt
examples/typescript/: README.md  mcp-protected.ts  package.json  quickstart.ts  tsconfig.json
registry-signup/: index.html  success.html
scripts/: README.md  demo-interactive.sh  demo-remote.ps1  deploy-fly.sh  dev-setup.sh  run-registry.sh
scripts/production/: 01-deploy-r710.sh  02-admin-setup.ps1  03-register-agents.ps1  04-issue-machine-dats.ps1
scripts/testlab/: 02-push-binaries.sh  03-setup-registry.sh  04-admin-setup.sh  06-issue-dats.sh  (+4 more)
sdks/python/: Cargo.toml  README.md  idprova_http.py  idprova_langchain.py  pyproject.toml
sdks/python-agents/: README.md  pyproject.toml
sdks/python-agents/idprova_agents/: IMPLEMENTATION-NOTES.md  __init__.py  autogen_adapter.py  crewai_adapter.py
sdks/python/idprova_agents/: GUARD_CONTRACT.md  guard.py  langchain_adapter.py
sdks/python/src/: lib.rs
sdks/python/src/idprova/: __init__.py  __init__.pyi
sdks/python/tests/: test_idprova_langchain_hash.py  test_sdk.py
test-vectors/: generate.rs
tests/: test_autogen_quickstart.py  test_crewai_quickstart.py  test_langchain_quickstart.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+39 files in other folders)
