[workspace]
members = [
    "crates/idprova-core",
    "crates/idprova-registry",
    "crates/idprova-cli",
    "sdks/python",
    "sdks/typescript/packages/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/techblaze-au/idprova"
homepage = "https://idprova.dev"
description = "IDProva — The open protocol for AI agent identity"
rust-version = "1.75"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "=2.1.1", features = ["serde", "rand_core", "zeroize"] }
blake3 = "=1.5.5"
sha2 = "=0.10.8"
rand = "=0.8.5"
# PQC (post-quantum) — uncomment when ready
# fips204 = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
multibase = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Network
ipnet = "2"
url = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Web (registry)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"

# Unique IDs
ulid = "1"

# Hex encoding
hex = "0.4"

# Config
toml = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
