[workspace]
members = [
    "crates/idprova-core",
    "crates/idprova-verify",
    "crates/idprova-registry",
    "crates/idprova-cli",
    "crates/idprova-mcp-demo",
    "crates/idprova-middleware",
    "crates/idprova-mcp",
    "sdks/python",
    "sdks/typescript/packages/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/techblaze-au/idprova"
homepage = "https://idprova.dev"
documentation = "https://docs.rs/idprova-core"
description = "IDProva — The open protocol for AI agent identity"
authors = ["Pratyush Sood <hello@techblaze.com.au>"]
keywords = ["identity", "ai-agent", "cryptography", "delegation", "audit"]
categories = ["authentication", "cryptography"]
rust-version = "1.85"

[workspace.dependencies]
# Crypto — pinned exact versions (S6: supply chain attack prevention)
ed25519-dalek = { version = "=2.1.1", features = ["serde", "rand_core", "zeroize"] }
blake3 = "=1.5.4"
sha2 = "=0.10.8"
evalexpr = "11"
# hkdf removed (S7: unused dependency, increases attack surface)
rand = "0.8"
# Zeroize — SR-1: secure memory erasure of private keys
zeroize = { version = "1", features = ["derive"] }

# PQC (post-quantum) — uncomment when ready
# fips204 = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
multibase = "0.9"
# RFC 8785 JSON Canonicalization Scheme — for deterministic signing (fix S4)
serde_json_canonicalizer = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Network
ipnet = "2"
url = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Web (registry)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"

# Unique IDs
ulid = "1"

# Hex encoding
hex = "0.4"

# Config
toml = "0.8"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 4
