[package]
name = "idprova-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for IDProva — AI agent identity, delegation, and audit"

[dependencies]
# Crypto
ed25519-dalek.workspace = true
blake3.workspace = true
sha2.workspace = true
hkdf.workspace = true
rand.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
multibase.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Unique IDs
ulid.workspace = true

# Hex encoding
hex.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
