[package]
name = "idprova-mcp-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/idprova-mcp-demo"
authors.workspace = true
keywords = ["identity", "ai-agent", "mcp", "json-rpc", "demo"]
categories = ["authentication", "web-programming::http-server"]
readme = "README.md"
publish = false
description = "IDProva MCP demo server — JSON-RPC 2.0 with DAT bearer auth and BLAKE3 receipt chain"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
evalexpr = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

