[package]
name = "idprova-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IDProva axum middleware — DAT bearer token verification as Tower layer"

[dependencies]
idprova-core = { path = "../idprova-core" }
idprova-verify = { path = "../idprova-verify" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
axum = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
