[package]
name = "idprova-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/idprova-middleware"
authors.workspace = true
keywords = ["identity", "ai-agent", "middleware", "axum", "tower"]
categories = ["authentication", "web-programming::http-server"]
readme = "README.md"
description = "IDProva Middleware — Tower/Axum layer for DAT bearer token verification"

[lib]
name = "idprova_middleware"
path = "src/lib.rs"

[dependencies]
idprova-core = { path = "../idprova-core", version = "0.1.0" }
idprova-verify = { path = "../idprova-verify", version = "0.1.0" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
