[package]
name = "idprova-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IDProva Registry — HTTP service for AID resolution and management"

[[bin]]
name = "idprova-registry"
path = "src/main.rs"

[dependencies]
idprova-core = { path = "../idprova-core" }
idprova-verify = { path = "../idprova-verify" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Database
rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Hex encoding
hex.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Time
chrono.workspace = true
