[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "idprova"
version = "0.1.0"
description = "IDProva SDK — AI agent identity, delegation, and audit"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
